Changelog:

from 16.03.2014:
- add first Streams for Livestreamer (Thx @mydebian)

from 09.03.2014:
- fix Converter: Russia SibirTelecom

from 08.03.2014:
- add Bouquet:  English Vietnam Movies

from 27.02.2014:
- add new language-file: hungary (Thx @pisti)

from 24.02.2014:
- remove Bouquet: Olympia

from 22.02.2014:
- add Bouquet: Georgia

from 19.02.2014:
- add Bouquet: German Sport

from 16.02.2014:
- add Bouquet: Swiss other

from 14.02.2014:
- change Deutsche Radiosender to EPG & Picon support
- add first Streams to Bouquet Deutsche Partymusic
- add WorldWebcams2

from 12.02.2014:
- more Errorlog output (Thx Black64)
- no Versionnumber at Plugindescription (Thx Black64)
- no Versionnumber at Extensionsllist (Thx Black64)
- add English Movies Bouquet (Thx HasBahCa)

from 11.02.2014:
- add Daenish Bouquet (Thx helveg6 from ATV Forum)

from 10.02.2014:
- change Version to 1.40
- add new converter
- add new russia bouquet

from 09.02.2014:
- add Olympia Flag (Thx NaseDC)

from 07.02.2014:
- add Servicereferenz for Teledunet (Thx zozo1976)
- add persian Language (Thx Eminem from openATV Forum)
- change Version to 1.33

from 06.02.2014:
- add Olympia Livestreams

from 30.01.2014:
- add new funktion for User downloadlist (/etc/enigma2/iptvlistupdater.user) Thx Black64
- change Version to 1.32

from 29.01.2014:
- add German Bouquet with Picons and EPG support

from 22.01.2014:
- Nilsat & USA Shows added
- first Steps for Piconsupport

from 14.01.2014:
- add curl as depend
- change Version to 1.31

from 13.01.2014:
- fix Teledunet ID Update Thx testi

from 10.01.2014:
- change Downloadsource for HasBahCa Links at other languages

from 09.01.2014:
- change Downloadsource for HasBahCa Links at german & turkey language

from 19.11.2013:
- small fixes

from 17.11.2013:
- small fixes

from 16.11.2013:
- add Teledunet Flag (Thx NaseDC)
- add Balkanradio Flag (Thx NaseDC)

from 15.11.2013:
- Fix GS when URL doesn't exists. (Thx Black64)
- add Bouquetsupport (Thx Black64)