@@ -1,5 +1,8 @@
 Changelog:
 
+from 20.03.2014:
+- fix ID0 Update Teledunet (Thx testi)
+
 from 16.03.2014:
 - add first Streams for Livestreamer (Thx @mydebian)
 
